--- a/16-extra/2015-itinere2-sol.lyx
+++ b/16-extra/2015-itinere2-sol.lyx
@@ -363,8 +363,34 @@ f
 \end_layout
 
 \begin_layout Standard
-La funzione main dichiara e inizializza 2 vettori, ciascuno di 5 elementi,
- e chiama la funzione una volta per ogni elemento dei vettori.
+La funzione 
+\begin_inset listings
+lstparams "language=C,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
+inline true
+status open
+
+\begin_layout Plain Layout
+
+main
+\end_layout
+
+\end_inset
+
+ dichiara e inizializza 2 vettori, ciascuno di 5 elementi; poi chiama la
+ funzione 
+\begin_inset listings
+lstparams "language=C,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
+inline true
+status open
+
+\begin_layout Plain Layout
+
+f
+\end_layout
+
+\end_inset
+
+ una volta per ogni elemento, scorrendo i vettori in parallelo.
 \end_layout
 
 \begin_layout Subsection
@@ -505,6 +531,13 @@ La funzione deve restituire la somma di tutti i valori della matrice le
  coordinate valide della matrice.
 \end_layout
 
+\begin_layout Standard
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Soluzione
 \end_layout
@@ -591,7 +624,7 @@ status open
 
 \begin_layout Plain Layout
 
-#define
+riduci
 \end_layout
 
 \end_inset
@@ -648,6 +681,13 @@ int riduci(int A[][N], int B[][N/2])
  La funzione calcola i valori di B partendo da quelli di A nel seguente
  modo: ciascun punto di B sarà calcolato come la media di quattro punti
  adiacenti di A, come mostrato in figura:
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace defskip
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -940,6 +980,13 @@ int riduci(int A[][N], int B[][N/2])
 \end_layout
 
 \begin_layout Standard
+\begin_inset VSpace defskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \begin_inset space \hfill{}
 \end_inset
 
@@ -963,6 +1010,13 @@ int riduci(int A[][N], int B[][N/2])
 
 
 \begin_inset space \hfill{}
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace vfill
 \end_inset
 
 
