--- a/extra/17-orario-dipendenti.lyx
+++ b/extra/17-orario-dipendenti.lyx
@@ -612,13 +612,694 @@ n", DIPENDENTE_MOLESTO, h_lav, m_lav);
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage clearpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Controllo globale
 \end_layout
 
 \begin_layout Standard
-Questa soluzione verrà fornita in un successivo aggiornamento del presente
- documento.
+\begin_inset listings
+lstparams "language=C,numbers=left,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
+inline false
+status open
+
+\begin_layout Plain Layout
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Orario dipendenti (controllo globale)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <stdio.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <string.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <stdlib.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#define MAX_EMPLOYEES 550
+\end_layout
+
+\begin_layout Plain Layout
+
+#define ID_LEN 9
+\end_layout
+
+\begin_layout Plain Layout
+
+#define ELEMENT_NOT_FOUND -1
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* inputFileName="passaggi.txt";
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* outputFileName="ore_effettive.txt";
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+typedef struct employee_s {
+\end_layout
+
+\begin_layout Plain Layout
+
+	int hh;
+\end_layout
+
+\begin_layout Plain Layout
+
+	int mm;
+\end_layout
+
+\begin_layout Plain Layout
+
+	struct employee_s* next;
+\end_layout
+
+\begin_layout Plain Layout
+
+} employee_t;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+typedef struct index_s {
+\end_layout
+
+\begin_layout Plain Layout
+
+  char id[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+  employee_t* entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+} index_t;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t timeTable[MAX_EMPLOYEES];
+\end_layout
+
+\begin_layout Plain Layout
+
+int actual_N = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int getIndexPosition(char* id);
+\end_layout
+
+\begin_layout Plain Layout
+
+int addEmployee(char* id);
+\end_layout
+
+\begin_layout Plain Layout
+
+int enqueue(int index, int h, int m);
+\end_layout
+
+\begin_layout Plain Layout
+
+void computeEmployee(int index, int* hh, int* mm);
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int main() {
+\end_layout
+
+\begin_layout Plain Layout
+
+	FILE* f_in;
+\end_layout
+
+\begin_layout Plain Layout
+
+	FILE* f_out;
+\end_layout
+
+\begin_layout Plain Layout
+
+	char id[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+	int i, h, m;
+\end_layout
+
+\begin_layout Plain Layout
+
+	f_in = fopen(inputFileName, "r");
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!f_in) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	printf("Impossibile aprire file di input
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fscanf(f_in, "%d %d %s", &h, &m, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	while (!feof(f_in)) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		i = getIndexPosition(id);
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (i == ELEMENT_NOT_FOUND) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			i = addEmployee(id);
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (i == ELEMENT_NOT_FOUND) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			fclose(f_in);
+\end_layout
+
+\begin_layout Plain Layout
+
+			return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		enqueue(i, h, m);
+\end_layout
+
+\begin_layout Plain Layout
+
+		fscanf(f_in, "%d %d %s", &h, &m, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fclose(f_in);
+\end_layout
+
+\begin_layout Plain Layout
+
+	f_out = fopen(outputFileName, "w");
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!f_out) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Impossibile creare il file di output
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -2;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (i = 0; i < actual_N; i++) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		computeEmployee(i, &h, &m);
+\end_layout
+
+\begin_layout Plain Layout
+
+		fprintf(f_out, "%s %d h %d m
+\backslash
+n", timeTable[i].id, h, m);
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fclose(f_out);
+\end_layout
+
+\begin_layout Plain Layout
+
+	return 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int getIndexPosition(char* id) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	int i;
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (i = 0; i < actual_N; i++) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (strcmp(id, timeTable[i].id) == 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			return i;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+  return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int addEmployee(char* id) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (actual_N >= MAX_EMPLOYEES) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Troppi dipendenti nel file.
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+			return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	timeTable[actual_N].entries = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	strcpy(timeTable[actual_N].id, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	actual_N++;
+\end_layout
+
+\begin_layout Plain Layout
+
+	return actual_N - 1;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int enqueue(int index, int h, int m) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* tmp = (employee_t*) malloc(sizeof(employee_t));
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* aux = timeTable[index].entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!tmp) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Errore: impossibile allocare memoria
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->hh = h;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->mm = m;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->next = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (aux == NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		timeTable[index].entries = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	} else {
+\end_layout
+
+\begin_layout Plain Layout
+
+		while (aux->next != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			aux = aux->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		aux->next = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return index;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+void computeEmployee(int index, int* hh, int* mm) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t *in, *out;
+\end_layout
+
+\begin_layout Plain Layout
+
+	*hh = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	*mm = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	in = timeTable[index].entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	while (in != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		out = in->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (out != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			*hh += out->hh - in->hh;
+\end_layout
+
+\begin_layout Plain Layout
+
+			*mm += out->mm - in->mm;
+\end_layout
+
+\begin_layout Plain Layout
+
+			/* adjust */
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (*mm >= 60) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				*mm -= 60;
+\end_layout
+
+\begin_layout Plain Layout
+
+				*hh ++;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (*mm < 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				*hh --;
+\end_layout
+
+\begin_layout Plain Layout
+
+				*mm += 60;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			in = out->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	} /* end while */
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
